--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,8 @@ hr {
 }
 
 img {
-  position: fixed;
+  margin: 10px;
   width: 330px;
-  top: 50px;
-  right: 15%;
   box-shadow: 10px 10px 5px rgb(165, 131, 131);
 }
 
