--- a/medium.css
+++ b/medium.css
@@ -1,3 +1,25 @@
-@media (min-width: 32.5em) {
-    float: right;
+@media only screen and (min-width: 37.5em) {
+
+header {
+    font-size: 1.2em;
+    border-radius: 5px;
+}
+
+main {
+    grid-template-columns: 1fr 1fr;
+
+
+}
+  
+
+section:nth-child(3) {
+grid-column: span 2;
+}
+
+
+footer {
+    font-size: 1em;
+    border-radius: 5px;
+}
+
 }
