--- a/forecasted-small.css
+++ b/forecasted-small.css
@@ -33,10 +33,11 @@ header {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 5em;
   font-family: 'Pathway Gothic One', sans-serif;
   font-weight:bold;
   text-align: center;
+  color: #4F6D7A;
 }
 
 nav {
@@ -53,15 +54,22 @@ nav a {
 
 }
 
+h2 {
+  font-size: 2.5em;
+}
+
 h2, h3 {
   font-family: 'Pathway Gothic One', sans-serif;
-  font-size: 2em;
   color: #EAA821;
   text-align: center;
   font-weight: bold;
   max-width: 50%;
   margin-left: auto;
   margin-right: auto;
+}
+
+h3 {
+  font-size: 2em;
 }
 
 p {
