--- a/lazyload.css
+++ b/lazyload.css
@@ -1,3 +1,13 @@
+body {
+  display: grid;
+  grid-gap: 50px;
+}
+
+main {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
 picture img[data-src] {
     filter: blur(0.2em);
   }
