--- a/lazyload.css
+++ b/lazyload.css
@@ -1,6 +1,8 @@
 body {
   display: grid;
-  grid-gap: 50px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 100vh;
+  grid-gap: 0px 0px;
 }
 
 main {
