--- a/preston-css-small.css
+++ b/preston-css-small.css
@@ -84,6 +84,10 @@ nav a {
   font-size: 1.1rem;
 }
 
+.active {
+  font-weight: bold;
+}
+
 li {
   display: inline-block;
   padding: 1%;
@@ -115,12 +119,13 @@ p {
   max-width: 50%;
   margin-left: auto;
   margin-right: auto;
+  
 }
 main {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 1.2em;
-    padding: 2.2em 1em 2.2em;
+    padding: 5%;
 }
 
 section {
@@ -145,13 +150,15 @@ hr {
 
 
 footer {
-  background-color: #F5F5F5;
+  background-color: #FCF0DA;
   font-family: 'Open Sans', sans-serif;
   font-size: 1.1em;
   text-align: center;
   color: #4F6D7A;
   padding: 15px 5px 15px;
-  max-width: 100%;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer a {
@@ -161,3 +168,88 @@ footer a {
 footer a:hover {
     color: #C0D6DF;
 }
+
+/* CONTACT */
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #FCF0DA;
+  color: #4F6D7A;
+}
+
+.fa-twitter {
+  background: #FCF0DA;
+  color: #4F6D7A;
+}
+
+.fa-google {
+  background: #FCF0DA;
+  color: #4F6D7A;
+}
+
+/* CONTACT */
+
+/* 5 DAY FORECAST */
+
+
+table, th, td {
+        border: 3px solid #C0D6DF;
+        border-radius: 10px;
+        border-collapse: collapse;
+        padding: 1%;
+        color: #4F6D7A;
+        text-align: center;
+    }
+
+    td img {
+        width: 80%;
+    }
+
+  table {
+    width: 90%;
+    margin-left:auto; 
+    margin-right:auto;
+    margin-bottom: 5%;
+  }
+
+ /* 5 DAY FORECAST */
+
+
+/* BANNER */
+#banner {
+  background-color: #FCF0DA;
+}
+
+#banner p {
+  text-align: center;
+  padding: 2%;
+}
+/* BANNER */
+
+
+
+/* WEATHER SUMMARY */
+
+#hero-img {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.stats p {
+  line-height: 2em;
+}
+
+
+/* WEATHER SUMMARY */
