--- a/preston-css-medium.css
+++ b/preston-css-medium.css
@@ -1,6 +1,23 @@
 /* Tablet Views ******************************/
 @media only screen and (max-width: 37.5em) {
- .menu {
+
+  /* 5 DAY FORECAST */
+  
+  table {
+    width: 90%;
+    margin-left:auto; 
+    margin-right:auto;
+    margin-bottom: 5%;
+    font-size: 0.8em;
+  }
+  
+  td img {
+        width: 30%;
+    }
+/* 5 DAY FORECAST */
+  
+  
+  .menu {
 
 }
   
@@ -44,8 +61,50 @@
 	display: block;
 }
   
-
+/* ARTICLE */
+  #preston-snow {
+  width: 90%;
+  margin-bottom: 5%;
+}
+  #article-body p {
+    max-width: 90%;
+    text-align: center;
+    font-size: 1em;
+  }
   
+  h3 {
+    max-width: 70%;
+  }
+  
+/* ARTICLE */
+
+  /* CONTACT */
+.map {
+  margin-right:auto; 
+  margin-left: 5%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+  width: 90%;
+  }
+  
+  #contact-body p {
+  text-align: center;
+  line-height: 2em;
+    max-width: 90%;
+  }
+  
+
+/* CONTACT */
+  
+  
+  /* BANNER */
+
+#banner p {
+  padding: 4%;
+  max-width: 80%;
+  font-size: 0.9rem;
+}
+/* BANNER */
 }
   
 /* Tablet Views ******************************/
@@ -61,5 +120,41 @@
     font-size: 0.9rem;
     margin-right: 20px;
   }
+  
+/* ARTICLE */
+  #preston-snow {
+  width: 90%;
+  margin-bottom: 5%;
+}
+  
+  p {
+    max-width: 90%;
+    text-align: center;
+  }
+  
+  h3 {
+    max-width: 70%;
+  }
+
+/* ARTICLE */
+  
+  
+/* CONTACT */
+.map {
+  margin-right:auto; 
+  margin-left: 5%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+  width: 90%;
+  }
+  
+  #contact-body p {
+  text-align: center;
+  line-height: 2.9em;
+    max-width: 90%;
+  }
+  
+
+/* CONTACT */
 
 }
