--- a/preston-css-large.css
+++ b/preston-css-large.css
@@ -1,4 +1,4 @@
-  /* Desktop Views ****************************/
+ /* Desktop Views ****************************/
 @media only screen and (min-width: 60em) {
  
 .menu {
@@ -38,4 +38,99 @@ li {
   }
   
   
+ /* ARTICLE */
+
+#preston-article {
+  padding:2%;
+}
+
+#article-body {
+  padding-right: 5%;
+}
+
+
+#preston-snow {
+  float: right;
+  width: 40%;
+  margin-left:auto; 
+  margin-right: 5%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+}
+
+
+#article p {
+  float: left;
+  text-align: left;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  font-size: 1.1em;
+}
+
+p {
+  max-width: 50%;
+}
+
+ /* ARTICLE */
+  
+  
+/* CONTACT */
+.map {
+  float: left;
+  margin-right:auto; 
+  margin-left: 5%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+  width: 40%;
   }
+  
+  #contact-body p {
+  float: right;
+  margin-right: 20%;
+  text-align: left;
+  line-height: 2.9em;
+  }
+  
+
+/* CONTACT */
+  
+  
+  /* WEATHER SUMMARY */
+
+#hero-img {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.stats {
+	position: absolute;
+	top: 35px;
+	left: 50px;
+	background: rgba(252, 240, 218, 0.87);
+  border-radius: 10px;
+	box-shadow: 0 0 10px #111;
+  max-width: 25%;
+  
+}
+  
+  
+  .stats p {
+    line-height: 2em;
+  }
+  
+  .stats p, .stats h3 {
+    max-width: 90%;
+  }
+
+.herodiv {
+  margin: 20px auto;
+  position: relative;
+}
+
+
+/* WEATHER SUMMARY */
+  
+  
+  }
+
+
