--- a/forecasted-small.css
+++ b/forecasted-small.css
@@ -5,7 +5,32 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap');
 
+/* BANNER */
+#banner {
+  background-color: #FCF0DA;
+}
 
+#banner p {
+  text-align: center;
+  padding: 2%;
+}
+/* BANNER */
+
+
+
+/* WEATHER SUMMARY */
+
+.hero-img {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.stats p {
+  line-height: 2em;
+}
+
+
+/* WEATHER SUMMARY */
 
 body {
   background-color: #C0D6DF;
@@ -81,13 +106,17 @@ nav a {
   color: #4F6D7A;
   text-decoration: none;
   padding: 1%;
-  font-size: 1.1 rem;
+  font-size: 1.1rem;
+}
 
+.active {
+  font-weight: bold;
 }
 
 li {
   display: inline-block;
   padding: 1%;
+
 }
 h2 {
   font-size: 2.5em;
@@ -115,12 +144,13 @@ p {
   max-width: 50%;
   margin-left: auto;
   margin-right: auto;
+  
 }
 main {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 1.2em;
-    padding: 2.2em 1em 2.2em;
+    padding: 5%;
 }
 
 section {
@@ -145,15 +175,15 @@ hr {
 
 
 footer {
-  background-color: #F5F5F5;
+  background-color: #FCF0DA;
   font-family: 'Open Sans', sans-serif;
   font-size: 1.1em;
   text-align: center;
   color: #4F6D7A;
   padding: 15px 5px 15px;
-  width: 100%;
-  position: absolute;
-  
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer a {
@@ -163,4 +193,359 @@ footer a {
 footer a:hover {
     color: #C0D6DF;
 }
+
+/* CONTACT */
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #FCF0DA;
+  color: #4F6D7A;
+}
+
+.fa-twitter {
+  background: #FCF0DA;
+  color: #4F6D7A;
+}
+
+.fa-google {
+  background: #FCF0DA;
+  color: #4F6D7A;
+}
+
+/* CONTACT */
+
+/* 5 DAY FORECAST */
+
+
+table, th, td {
+        border: 3px solid #C0D6DF;
+        border-radius: 10px;
+        border-collapse: collapse;
+        padding: 1%;
+        color: #4F6D7A;
+        text-align: center;
+    }
+
+    td img {
+        width: 80%;
+    }
+
+  table {
+    width: 90%;
+    margin-left:auto; 
+    margin-right:auto;
+    margin-bottom: 5%;
+  }
+
+ /* 5 DAY FORECAST */
+
+
+/* Tablet Views ******************************/
+@media only screen and (max-width: 37.5em) {
+
+  /* 5 DAY FORECAST */
+  
+  table {
+    width: 90%;
+    margin-left:auto; 
+    margin-right:auto;
+    margin-bottom: 5%;
+    font-size: 0.8em;
+  }
+  
+  td img {
+        width: 30%;
+    }
+/* 5 DAY FORECAST */
+  
+  
+  .menu {
+
+}
+  
+
+.navigation {
+    list-style: none;
+
+}
+
+.navigation li:first-child {
+    display: block;
+}
+
+.navigation li {
+    display: none;
+    margin-right: 9%;
+}
+  
+
+.navigation a {
+    display: block;
+    padding: 1%;
+    text-align: center;
+    text-decoration: none;
+    color: #4F6D7A;
+    
+}
+
+.navigation a:active {
+    color: #4F6D7A;
+}
+  
+  
+  #catchphrase {
+    font-size: 1.3rem;
+    padding: 0;
+    
+}
+  
+.responsive li {
+	display: block;
+}
+  
+/* ARTICLE */
+  #preston-snow {
+  width: 90%;
+  margin-bottom: 5%;
+}
+  #article-body p {
+    max-width: 90%;
+    text-align: center;
+    font-size: 1em;
+  }
+  
+  h3 {
+    max-width: 70%;
+  }
+  
+/* ARTICLE */
+
+  /* CONTACT */
+.map {
+  margin-right:auto; 
+  margin-left: 5%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+  width: 90%;
+  }
+  
+  #contact-body p {
+  text-align: center;
+  line-height: 2em;
+    max-width: 90%;
+  }
+  
+
+/* CONTACT */
+  
+  
+  /* BANNER */
+
+#banner p {
+  padding: 4%;
+  max-width: 80%;
+  font-size: 0.9rem;
+}
+/* BANNER */
+}
+  
+/* Tablet Views ******************************/
+@media only screen and (min-width: 37.5em) {
+ .menu {
+  margin-right: 8%;
+   display: none !important;
+} 
+  
+    
+  nav a {
+    width: 50px;
+    font-size: 0.9rem;
+    margin-right: 20px;
+  }
+  
+/* ARTICLE */
+  #preston-snow {
+  width: 90%;
+  margin-bottom: 5%;
+}
+  
+  p {
+    max-width: 90%;
+    text-align: center;
+  }
+  
+  h3 {
+    max-width: 70%;
+  }
+
+/* ARTICLE */
+  
+  
+/* CONTACT */
+.map {
+  margin-right:auto; 
+  margin-left: 5%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+  width: 90%;
+  }
+  
+  #contact-body p {
+  text-align: center;
+  line-height: 2.9em;
+    max-width: 90%;
+  }
+  
+
+/* CONTACT */
+
+}
+
+  /* Desktop Views ****************************/
+@media only screen and (min-width: 60em) {
+ 
+.menu {
+    display: none !important;
+  }
+  
+  
+  nav a {
+		font-size: 1.1rem;
+    width: 50px;
+	}
+	main {
+		grid-template-columns: 1fr;
+	}
+nav {
+  overflow: hidden;
+ 
+}
+
+nav a {
+  color: #4F6D7A;
+  text-decoration: none;
+  padding: 1%;
+  font-size: 1rem;
+  margin-right: 25px;
+
+}
+
+li {
+  display: inline-block;
+  padding: 1%;
+}
+  
+  main, footer {
+    max-width: 95%;
+    margin: 0 auto;
+  }
+  
+  
+ /* ARTICLE */
+
+#preston-article {
+  padding:2%;
+}
+
+#article-body {
+  padding-right: 5%;
+}
+
+
+#preston-snow {
+  float: right;
+  width: 40%;
+  margin-left:auto; 
+  margin-right: 5%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+}
+
+
+#article p {
+  float: left;
+  text-align: left;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  font-size: 1.1em;
+}
+
+p {
+  max-width: 50%;
+}
+
+ /* ARTICLE */
+  
+  
+/* CONTACT */
+.map {
+  float: left;
+  margin-right:auto; 
+  margin-left: 5%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+  width: 40%;
+  }
+  
+  #contact-body p {
+  float: right;
+  margin-right: 20%;
+  text-align: left;
+  line-height: 2.9em;
+  }
+  
+
+/* CONTACT */
+  
+  
+  /* WEATHER SUMMARY */
+
+.hero-img {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.stats {
+	position: absolute;
+	top: 35px;
+	left: 50px;
+	background: rgba(252, 240, 218, 0.87);
+  border-radius: 10px;
+	box-shadow: 0 0 10px #111;
+  max-width: 25%;
+  
+}
+  
+  
+  .stats p {
+    line-height: 2em;
+  }
+  
+  .stats p, .stats h3 {
+    max-width: 90%;
+  }
+
+.herodiv {
+  margin: 20px auto;
+  position: relative;
+}
+
+
+/* WEATHER SUMMARY */
+  
+  
+  }
+
 
