--- a/preston-css-small.css
+++ b/preston-css-small.css
@@ -5,7 +5,97 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap');
 
+  /* STORM REPORT */
 
+form fieldset {
+  background-color: #FCF0DA;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  border-radius: 10px;
+  border: 2px solid #C0D6DF;
+  padding: 2%;
+  margin-bottom: 2%;
+}
+
+form legend {
+  font-family: 'Pathway Gothic One', sans-serif;
+  font-size: 2em;
+  color: #4F6D7A;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
+form label.top {
+  font-family: 'Open Sans', sans-serif;
+  color: #4F6D7A;
+  font-weight: bold;
+}
+
+form label.top  {
+    display: block;
+    padding-top: 1rem;
+}
+
+form label.top input, form label.top select, textarea {
+    display: block;
+    font-size: .9rem;
+    border: solid 1px #C0D6DF;
+    border-radius: 10px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 90%;
+    font-family: 'Open Sans', sans-serif;
+  
+}
+
+
+form label.side {
+    font-family: 'Open Sans', sans-serif;
+    color: #4F6D7A;
+}
+
+
+form input.submitBtn {
+    display: block;
+    border: none;
+    background-color: #4F6D7A;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+    margin-top: 2%;
+    width: 96%;
+    max-width: 20rem;
+}
+
+form input.submitBtn:hover {
+  display: block;
+  background-color: #FCF0DA;
+  color: #4F6D7A;
+  transition: 0.3s ease-out;
+
+}
+
+textarea {
+  height: 100px;
+}
+
+
+form label.top input:required {
+    border-left: #4F6D7A solid 6px;
+}
+
+form label.top input:required:valid {
+    border-left: #EAA821 solid 6px;
+}
+
+
+
+  /* STORM REPORT */
 
 
 /* BANNER */
