--- a/prophets.css
+++ b/prophets.css
@@ -1,1 +1,65 @@
+/* Fonts */
 
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
+
+/* Mobile Views */
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr;
+
+}
+
+h1, h2 {
+  font-family: 'Bree Serif', serif;
+  text-align: center;
+  color: #4a4e98;
+}
+
+main {
+  text-align: center;
+  background-color: #dddede;
+  box-shadow: 0px 0px 40px gray;
+  padding: 1%;
+
+
+}
+
+section {
+  background-color: #c7c9d8;
+  border: 1px solid #4a4e98;
+  margin: 1%;
+  padding-bottom: 5%;
+}
+
+img {
+  width: 55%;
+  box-shadow: 0px 0px 15px black;
+}
+
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: .6em;
+  margin-bottom: 5%;
+}
+
+
+
+/* Tablet Views ******************************/
+@media only screen and (min-width: 37.5em) {
+
+  .cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+} 
+
+
+/* Desktop Views ****************************/
+
+@media only screen and (min-width: 60em) {
+ 
+.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
