--- a/preston-css-small.css
+++ b/preston-css-small.css
@@ -260,7 +260,8 @@ table, th, td {
  /* 5 DAY FORECAST */
 
   .cards img {
-    width: 50%;
+    width: 70%;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 5%;
   }
