--- a/weathersite/index-css-small.css
+++ b/weathersite/index-css-small.css
@@ -280,7 +280,8 @@ table, th, td {
 
 .town-image {
   padding-bottom: 5%;
-  border-radius: 10px; 
+  border-radius: 10px 10px 10px 10px; 
+  width: 30%;
 }
 
 
