--- a/weathersite/preston-css-small.css
+++ b/weathersite/preston-css-small.css
@@ -30,10 +30,11 @@
 }
 
 .weather-summary {
-  background-color: #;
+  background-color: #C0D6DF; 
   padding-bottom: 2%;
   margin-top: -1%;
 }
+
 
 
 /* WEATHER SUMMARY */
